fix incorrect footer text alignment small screens

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -70,19 +70,23 @@ img {
 }
 
 .footer {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  flex: 1;
   padding: 0 1.28rem 1.28rem;
-  white-space: pre-wrap;
   font-family: 'Epilogue', sans-serif;
   font-size: 1.2rem;
+  text-align: center;
 
   &__link {
     &:hover {
       color: v.$almost-black;
     }
+  }
+
+  @include m.breakpoint-lg() {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex: 1;
+    white-space: pre-wrap;
   }
 }
 
